<resources>
    <string name="app_name">games</string>
    <string name="title">Login</string>
    <string name="welcome">Bem-vindo!</string>
    <string name="explain_body">Com o nosso aplicativo será muito mais fácil e divertido manter o controle dos seus games!</string>
    <string name="check_box_text">Lembrar-me</string>
    <string name="btn_login">Entrar</string>
    <string name="btn_sing_up">Criar uma Conta</string>
    <string name="hint_email">E-mail</string>
    <string name="hint_password">Senha</string>
    <string name="picture_user_question">Vamos escolher uma foto?</string>
    <string name="data_register_question">Dados para autenticação</string>
    <string name="hint_name_field">Qual e o seu nome?</string>
    <string name="hint_city_field">Qual e a sua Cidade?</string>
    <string name="hint_birthday_field">Data de nascimento</string>
    <string name="user_gamer_level_question">Qual e o seu nivel gamer?</string>
    <string name="user_prefer_console">Qual o seu console preferido?</string>
    <string name="user_genre_question">Sexo:</string>
    <string name="female_field">Feminino</string>
    <string name="masculine_field">Masculino</string>
    <string name="actionBar_profile_title">Seu Perfil!</string>
    <string name="actionBar_register_title">Criar uma Conta!</string>
    <string name="actionBar_register_game_title">Cadastre um Novo Game!</string>

    <string name="title_finished_game">Jogos Finalizados</string>
    <string name="title_playing_title">Jogando</string>
    <string name="title_user_age">Idade</string>
    <string name="title_game_registered">Seus jogos cadastrados</string>

    <string name="hint_title_game">Qual é o nome do jogo ?</string>
    <string name="hint_desc_game">Qual é a descrição desse game?</string>
    <string name="hint_studio_game">Qual é o estudio ?</string>
    <string name="hint_released_year_game">Ano de lançamento</string>

    <string name="radio_input_title_game_register">Já zerou?</string>
    <string name="radio_input_game_register_true">claro 😉</string>
    <string name="radio_input_game_register_false">nao 😣</string>

    <string-array name="consoles">
        <item>Playstation 5</item>
        <item>Xbox One</item>
        <item>Nintendo Switch</item>
        <item>Super Nintendo</item>
        <item>Nintendo 64</item>
        <item>Sega Saturn</item>
    </string-array>

</resources>