<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    tools:context=".ui.GameRegisterActivity">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/constraintLayout6"
        android:layout_width="0dp"
        android:layout_height="100dp"
        android:background="@drawable/wave_top"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

    </androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/constraintLayout7"
        android:layout_width="0dp"
        android:layout_height="100dp"
        android:background="@drawable/wave_down"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">

    </androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.cardview.widget.CardView
        android:id="@+id/cardView2"
        android:layout_width="0dp"
        android:layout_height="200dp"
        android:layout_marginStart="13dp"
        android:layout_marginTop="12dp"
        android:layout_marginEnd="13dp"
        android:background="@color/orange"
        android:foregroundGravity="clip_horizontal"
        app:cardCornerRadius="16dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/constraintLayout6">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@color/dark_blue">

            <ImageView
                android:id="@+id/game_picture_image_view"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:srcCompat="@drawable/ic_image_upload" />
        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.cardview.widget.CardView>

    <EditText
        android:id="@+id/game_title_edit_text"
        android:layout_width="0dp"
        android:layout_height="48dp"
        android:layout_marginStart="13dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="13dp"
        android:background="@drawable/input"
        android:drawablePadding="10dp"
        android:drawableTint="@color/orange_lighter"
        android:ems="10"
        android:hint="@string/hint_title_game"
        android:inputType="textEmailAddress"
        android:padding="5dp"
        android:paddingStart="10dp"
        android:textColor="@color/black"
        android:textColorHint="@color/text_begie"
        android:textCursorDrawable="@drawable/text_cursor_color"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/cardView2" />

    <EditText
        android:id="@+id/game_desc_edit_text"
        android:layout_width="0dp"
        android:layout_height="48dp"
        android:layout_marginStart="13dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="13dp"
        android:background="@drawable/input"
        android:drawablePadding="10dp"
        android:drawableTint="@color/orange_lighter"
        android:ems="10"
        android:hint="@string/hint_desc_game"
        android:inputType="text"
        android:padding="5dp"
        android:paddingStart="10dp"
        android:textColor="@color/black"
        android:textColorHint="@color/text_begie"
        android:textCursorDrawable="@drawable/text_cursor_color"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/game_title_edit_text" />

    <EditText
        android:id="@+id/game_studio_edit_text"
        android:layout_width="0dp"
        android:layout_height="48dp"
        android:layout_marginStart="13dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="13dp"
        android:background="@drawable/input"
        android:drawablePadding="10dp"
        android:drawableTint="@color/orange_lighter"
        android:ems="10"
        android:hint="@string/hint_studio_game"
        android:inputType="text"
        android:padding="5dp"
        android:paddingStart="10dp"
        android:textColor="@color/black"
        android:textColorHint="@color/text_begie"
        android:textCursorDrawable="@drawable/text_cursor_color"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/game_desc_edit_text" />

    <EditText
        android:id="@+id/game_released_year_edit_text"
        android:layout_width="172dp"
        android:layout_height="56dp"
        android:layout_marginTop="10dp"
        android:background="@drawable/input"
        android:drawablePadding="10dp"
        android:drawableTint="@color/orange_lighter"
        android:ems="10"
        android:hint="@string/hint_released_year_game"
        android:inputType="number"
        android:padding="5dp"
        android:paddingStart="10dp"
        android:textColor="@color/black"
        android:textColorHint="@color/text_begie"
        android:textCursorDrawable="@drawable/text_cursor_color"
        app:layout_constraintStart_toStartOf="@+id/game_studio_edit_text"
        app:layout_constraintTop_toBottomOf="@+id/game_studio_edit_text" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="60dp"
        android:text="@string/radio_input_title_game_register"
        android:textColor="@color/text_begie"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="@+id/game_studio_edit_text"
        app:layout_constraintTop_toBottomOf="@+id/game_studio_edit_text" />

    <RadioGroup
        android:id="@+id/finishedRadioGroup"
        android:layout_width="184dp"
        android:layout_height="59dp"
        android:layout_marginTop="13dp"
        android:layout_marginEnd="13dp"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView">

        <RadioButton
            android:id="@+id/female"
            android:layout_width="85dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="12dp"
            android:buttonTint="@color/text_begie"
            android:text="@string/radio_input_game_register_true"
            android:textColor="@color/text_begie"
            android:textSize="18sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <RadioButton
            android:id="@+id/male"
            android:layout_width="85dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="12dp"
            android:layout_marginTop="12dp"
            android:buttonTint="@color/text_begie"
            android:text="@string/radio_input_game_register_false"
            android:textColor="@color/text_begie"
            android:textSize="18sp"
            app:layout_constraintStart_toEndOf="@+id/female"
            app:layout_constraintTop_toTopOf="parent" />
    </RadioGroup>
</androidx.constraintlayout.widget.ConstraintLayout>